<resources>
    <string name="app_name">SPA</string>
    <string name="title_activity_wifi_connect">WifiConnectActivity</string>

    <string name="wifiConnectHello">¡¡Hola!!</string>
    <string name="wifiConnectIntruc1">Antes de que continuemos, configuremos tu dispositivo</string>
    <string name="wifiConnectIntruc2">Conectate a tu wifi y estamos listos</string>

    <string name="control_text">Seleccione lo que desea controlar</string>
    <string name="control_room">Habitaciónes</string>

    <string name="control_toolbartext">Controlar</string>
    <string name="control_toolbartext2">Mi casa</string>

    <string name="control_house">Mi casa</string>
    <string name="control_room1">Habitación 1</string>
    <string name="control_room2">Habitación 2</string>
    <string name="control_room3">Habitación 3</string>
    <string name="control_living">Living</string>
    <string name="control_kitchen">Cocina</string>
    <string name="control_room_add">Nueva habitación</string>
    <string name="control_room_add_save">Guardar</string>
    <string name="control_room_add_lamp1">Lampara 24mts</string>
    <string name="control_room_add_lamp2">Lampara 5mts</string>
    <string name="control_room_add_lamp3">Lampara 1mts</string>

    <string name="room_light">Luz</string>
    <string name="room_light1">Velador</string>
    <string name="room_light2">Luz general</string>
    <string name="room_bath">Luz baño</string>
    <string name="room_tv">TV</string>
    <string name="room_radio">Radio</string>
    <string name="room_on">Encender</string>
    <string name="room_off">Apagar</string>


    <string name="profile">Perfiles</string>
    <string name="profile1">Fin de semana</string>
    <string name="profile2">Luces de afuera</string>
    <string name="profile_more">Agregar perfil</string>
    <string name="profile_toolbar">Fin de semana</string>
    <string name="profile_on">Activar perfil</string>
    <string name="profile_devices">Dispositivos configurados</string>
    <string name="profile_time">Cada 10s</string>


</resources>
