<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffff">

    <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifiConnectHello"
                android:textSize="40sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifiConnectIntruc1"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:textAlignment="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/wifiConnectIntruc2"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:textAlignment="center"/>

        <RelativeLayout
                android:layout_marginTop="50dp"
                android:background="@drawable/cards_border"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:visibility="gone"
                    android:id="@+id/wifiList"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent">
            </androidx.recyclerview.widget.RecyclerView>


        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>