<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffff">

    <include
            android:id="@+id/myToolbar"
            layout="@layout/toolbar"/>

    <ImageView
            android:layout_below="@+id/myToolbar"
            android:id="@+id/imgRoom"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_bed"
            android:layerType="software"
            android:background="@drawable/circle_background"
    />

    <TextView
            android:id="@+id/txtControl"
            android:layout_below="@+id/imgRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/control_room1"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:typeface="serif"
            android:layout_centerInParent="true"/>

    <RelativeLayout
            android:layout_below="@+id/txtControl"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cards_border"
            android:gravity="center_horizontal">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="50dp">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginRight="40dp"
                        android:gravity="center">

                    <ImageView
                            android:id="@+id/imgLamp1"
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:src="@drawable/ic_idea"
                            android:layerType="software"
                            android:background="@drawable/circle_background_small"
                    />
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/room_light1"
                            android:layout_gravity="center"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginRight="40dp"
                        android:gravity="center">

                    <ImageView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:src="@drawable/ic_idea"
                            android:layerType="software"
                            android:background="@drawable/circle_background_small"
                    />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/room_light2"
                            android:layout_gravity="center"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:src="@drawable/ic_bathtub"
                            android:layerType="software"
                            android:background="@drawable/circle_background_small"
                    />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/room_bath"
                            android:layout_gravity="center"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="50dp">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginRight="40dp"
                        android:gravity="center">

                    <ImageView
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:src="@drawable/ic_monitor"
                            android:layerType="software"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/room_tv"
                            android:layout_gravity="center"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">

                    <ImageView
                            android:id="@+id/imgRadio"
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:src="@drawable/ic_radio"
                            android:layerType="software"
                            android:background="@drawable/circle_background_small"
                    />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/room_radio"
                            android:layout_gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>