<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffff">

    <include
            android:id="@+id/myToolbar"
            layout="@layout/toolbar"/>

    <ImageView
            android:layout_below="@+id/myToolbar"
            android:id="@+id/imgRoom"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_user_2"
            android:layerType="software"
            android:background="@drawable/circle_background_small2"
    />

    <TextView
            android:id="@+id/txtControl"
            android:layout_below="@+id/imgRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/profile"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:typeface="serif"
            android:layout_centerInParent="true"
            app:fontFamily="@font/poppins_medium"/>

    <RelativeLayout
            android:layout_below="@+id/txtControl"
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cards_border"
            android:gravity="center_horizontal">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="50dp">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginEnd="20dp"
                        android:gravity="center">

                    <ImageView
                            android:id="@+id/imgProfile1"
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_user_2"
                            android:layerType="software"
                            android:background="@drawable/circle_background_small2"
                    />
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/profile1"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            app:fontFamily="@font/poppins_medium"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginEnd="20dp"
                        android:gravity="center">

                    <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_user_2"
                            android:layerType="software"
                            android:background="@drawable/circle_background_small2"
                    />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/profile2"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            app:fontFamily="@font/poppins_medium"/>
                </LinearLayout>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/ic_plus"
                            android:layerType="software"
                            android:background="@drawable/circle_background_small2"
                    />

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/profile_more"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            app:fontFamily="@font/poppins_medium"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>